Fixed broken css (height of pages / overflow)

--- a/src/Components/LoginBox.module.css
+++ b/src/Components/LoginBox.module.css
@@ -7,6 +7,7 @@
   align-items: center;
 
   width: inherit;
+  min-height: calc(100vh - var(--navbar-height));
   height: calc(100vh - var(--navbar-height));
   
 }
