--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ body, html {
   background: var(--light-green);
   padding: 0;
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   overflow-x: hidden;
 
